user-api/k8s/app.yml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Namespace
metadata:
  name: sock-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sock-user
  name: sock-user
  labels:
    app: sock-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sock-user
  template:
    metadata:
      labels:
        app: sock-user
    spec:
      containers:
      - name: sock-user
        image: ghcr.io/making/spring-socks-user
        resources:
          limits:
            cpu: 0.5
            memory: 256Mi
          requests:
            cpu: 0.2
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 180
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - sock-user
            topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  namespace: sock-user
  name: sock-user
  labels:
    app: sock-user
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: sock-user
  type: #@ "LoadBalancer" if str(data.values.use_ingress) == 'False' else "ClusterIP"
