user-api/k8s/mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: sock-user-mysql
  namespace: sock-user
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sock-user-mysql
  namespace: sock-user
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-config
          mountPath: /etc/mysql/conf.d
          readOnly: true
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: sock-user-mysql
      - name: mysql-config
        configMap:
          name: sock-user-mysql
          items:
          - key: charset.cnf
            path: charset.cnf
#@ end
